force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Federal_Contract__c/Federal_Contract__c.object-meta.xml
<CustomObject>
    <label>Federal Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Federal Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>