force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Federal_Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>