force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Federal_Contract__c/fields/Contracted_Company__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel
  >Federal Contracts (Contracted Company)</relationshipLabel>
    <relationshipName>Federal_Contracts_Recieved</relationshipName>
    <type>Lookup</type>
</CustomField>