force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Federal_Contract__c/fields/Contracting_Department__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracting Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Federal Contracts</relationshipLabel>
    <relationshipName>Federal_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>